# uv-workspace-example

./: README.md  pyproject.toml
src/uv_workspace/: import_test.py
